# data-analytics

./: .env.local  .gitignore  Makefile  Pipfile  README.md  api_sirene_connector.py  app.py  create_enriched_data_tables.py  create_enriched_data_views.py  create_offerer_cultural_activity.py  db.py  docker-compose-with-metabase.yml  docker-compose.yml  env_file  get_label_from_given_ape_code.py  get_label_from_given_ape_naf.py  install_models.py  logger.py  offerer_queries.py  parse_ape_code_from_offerer_details.py  parse_ape_naf_from_offerer_details.py  pyproject.toml  query_enriched_data_tables.py  query_enriched_data_views.py  requirements.txt  run_server.py  setup.py  stock_queries.py  user_queries.py  view_queries.py
.circleci/: config.yml
application/: get_enriched_data_status.py  get_stock_enriched_data_status.py
connectors/: api_sirene_connector.py
metabase/: cli.py  commands.py
metabase_cli/: metabase.py  metabase_commands.py
models/: create_enriched_data_views.py  create_offerer_cultural_activity.py  create_offerer_with_department_code.py  create_offerer_with_department_code_dataframe.py  db.py
repository/: health_check_queries.py  health_check_repository.py  offerer_queries.py  query_enriched_data_views.py  stock_queries.py  user_queries.py  view_queries.py
tests/: api_sirene_connector_test.py  conftest.py  create_enriched_data_tables_test.py  create_offerer_cultural_activity_test.py  data_creators.py  db_test.py  get_label_from_given_ape_code_test.py  get_label_from_given_ape_naf_test.py  offerer_queries_test.py  stock_queries_test.py  utils.py  (+4 more)
(+85 files in other folders)
